# tep-lab

./: .gitignore
lab1/: CMakeLists.txt
lab1/include/: allocations.h  const.h  ctable.h  table.h  utils.h
lab1/src/: allocations.cpp  ctable.cpp  main.cpp  table.cpp  utils.cpp
lab2/: CMakeLists.txt
lab2/include/: number.h
lab2/src/: main.cpp  number.cpp
lab3/: CMakeLists.txt  main.cpp
lab3/include/: cli.h  tree.h
lab3/include/nodes/: base.h
lab3/include/nodes/functions/: cos.h  function.h  sin.h
lab3/include/nodes/numbers/: const.h  number.h  variable.h
lab3/include/nodes/operators/: add.h  div.h  mul.h  operator.h  sub.h
lab3/src/: cli.cpp  tree.cpp
lab3/src/nodes/: base.cpp
lab3/src/nodes/functions/: cos.cpp  function.cpp  sin.cpp
lab3/src/nodes/numbers/: const.cpp  number.cpp  variable.cpp
lab3/src/nodes/operators/: add.cpp  div.cpp  mul.cpp  operator.cpp  sub.cpp
lab4/: CMakeLists.txt  file.txt  lab4
lab4/include/: tree.h
lab4/include/nodes/numbers/: number.h  variable.h
lab4/include/nodes/operators/: div.h  mul.h  operator.h  sub.h
lab4/include/results/: error.h  result.h  result_same.h  result_void.h  saver.h
lab4/src/: main.cpp  tree.cpp
lab4/src/nodes/functions/: cos.cpp  function.cpp  sin.cpp
lab4/src/nodes/numbers/: variable.cpp
lab4/src/nodes/operators/: add.cpp  div.cpp  mul.cpp  operator.cpp  sub.cpp
lab4/src/results/: error.cpp
lab5/: CMakeLists.txt
lab5/include/: tree.h
lab5/include/nodes/: node.h
lab5/include/nodes/functions/: cos.h  function.h  sin.h
lab5/include/nodes/numbers/: const.h
lab5/include/nodes/operators/: add.h
lab5/include/pointers/: refcount.h  smartptr.h
lab5/include/results/: result.h
lab5/src/: main.cpp  tree.cpp
lab5/src/nodes/: node.cpp
lab5/src/nodes/functions/: sin.cpp
lab5/src/nodes/numbers/: const.cpp  number.cpp
lab5/src/nodes/operators/: add.cpp  sub.cpp
lab5/src/pointers/: refcount.cpp
